@@ -54,47 +54,47 @@ Class42=CWavFileDlg
 Class43=CWireDlg
 
 ResourceCount=42
-Resource1=IDD_SWINGFILL
-Resource2=IDD_WAVEOUTCONFIG (Neutral (Default))
+Resource1=IDD_DSOUNDCONFIG (Neutral (Default))
+Resource2=IDD_CONFIGURATION (Neutral (Default))
 Resource3=IDR_VSTFRAME (Neutral (Default))
-Resource4=IDD_MIDI_INPUT
-Resource5=IDD_GEAR_DELAY (Neutral (Default))
-Resource6=IDD_PSYBAR (Neutral (Default))
-Resource7=IDD_ABOUTBOX (Neutral (Default))
-Resource8=IDD_ENVDIALOG (Neutral (Default))
-Resource9=IDD_INST_EDITOR (Neutral (Default))
-Resource10=IDD_OUTPUT (Neutral (Default))
-Resource11=IDD_MIDI_LEARN
+Resource4=IDD_ABOUTBOX (Neutral (Default))
+Resource5=IDD_GEAR_PSYCHOSC (Neutral (Default))
+Resource6=IDD_OUTPUT (Neutral (Default))
+Resource7=IDD_GEAR_FLANGER (Neutral (Default))
+Resource8=IDD_INFO (Neutral (Default))
+Resource9=IDD_NEWMACHINE (Neutral (Default))
+Resource10=IDD_VSTRACK (Neutral (Default))
+Resource11=IDD_SEQUENCER (Neutral (Default))
 Resource12=IDR_POPUPMENU (Neutral (Default))
-Resource13=IDR_WAVEFRAME (Neutral (Default))
-Resource14=IDR_MACHINEFRAME (Neutral (Default))
-Resource15=IDD_INSTRUMENT (Neutral (Default))
-Resource16=IDD_VSTRACK (Neutral (Default))
-Resource17=IDD_SONGPROP (Neutral (Default))
-Resource18=IDD_CONFIGURATION (Neutral (Default))
-Resource19=IDD_WIREDIALOG (Neutral (Default))
-Resource20=IDD_PSYBAR2 (Neutral (Default))
-Resource21=IDD_INFO (Neutral (Default))
-Resource22=IDD_NEWVAL (Neutral (Default))
-Resource23=IDD_GEAR_FILTER (Neutral (Default))
-Resource24=IDD_GEARDISTORT (Neutral (Default))
-Resource25=IDD_PATDLG (Neutral (Default))
-Resource26=IDD_GEAR_GAINER (Neutral (Default))
-Resource27=IDD_DSOUNDCONFIG (Neutral (Default))
-Resource28=IDD_MACPROP (Neutral (Default))
-Resource29=IDD_NEWMACHINE (Neutral (Default))
-Resource30=IDD_GEAR_PSYCHOSC (Neutral (Default))
-Resource31=IDD_MASTERDLG (Neutral (Default))
-Resource32=IDD_WAVED_AMPLIFY (Neutral (Default))
-Resource33=IDD_GEAR_TRACKER (Neutral (Default))
-Resource34=IDD_GEAR_FLANGER (Neutral (Default))
-Resource35=IDD_DIRECTORIES (Neutral (Default))
-Resource36=IDD_SEQUENCER (Neutral (Default))
-Resource37=IDD_MIDI_MONITOR (Neutral (Default))
-Resource38=IDD_SKIN (Neutral (Default))
-Resource39=IDD_PRESETS (Neutral (Default))
-Resource40=IDD_GREETS (Neutral (Default))
-Resource41=IDD_KEYCONFIG (Neutral (Default))
+Resource13=IDR_MACHINEFRAME (Neutral (Default))
+Resource14=IDD_GEAR_DELAY (Neutral (Default))
+Resource15=IDD_PSYBAR2 (Neutral (Default))
+Resource16=IDR_WAVEFRAME (Neutral (Default))
+Resource17=IDD_PATDLG (Neutral (Default))
+Resource18=IDD_MIDI_MONITOR (Neutral (Default))
+Resource19=IDD_MIDI_INPUT
+Resource20=IDD_DIRECTORIES (Neutral (Default))
+Resource21=IDD_INST_EDITOR (Neutral (Default))
+Resource22=IDD_ENVDIALOG (Neutral (Default))
+Resource23=IDD_WIREDIALOG (Neutral (Default))
+Resource24=IDD_MIDI_LEARN
+Resource25=IDD_PSYBAR (Neutral (Default))
+Resource26=IDD_INSTRUMENT (Neutral (Default))
+Resource27=IDD_NEWVAL (Neutral (Default))
+Resource28=IDD_SWINGFILL
+Resource29=IDD_GEAR_GAINER (Neutral (Default))
+Resource30=IDD_WAVED_AMPLIFY (Neutral (Default))
+Resource31=IDD_GEAR_FILTER (Neutral (Default))
+Resource32=IDD_KEYCONFIG (Neutral (Default))
+Resource33=IDD_WAVEOUTCONFIG (Neutral (Default))
+Resource34=IDD_GEAR_TRACKER (Neutral (Default))
+Resource35=IDD_PRESETS (Neutral (Default))
+Resource36=IDD_MASTERDLG (Neutral (Default))
+Resource37=IDD_SKIN (Neutral (Default))
+Resource38=IDD_MACPROP (Neutral (Default))
+Resource39=IDD_GREETS (Neutral (Default))
+Resource40=IDD_GEARDISTORT (Neutral (Default))
+Resource41=IDD_SONGPROP (Neutral (Default))
 Class44=CSongInfoDlg
 Resource42=IDR_MAINFRAME (Neutral (Default))
 
